--- a/home-page.html
+++ b/home-page.html
@@ -19,7 +19,7 @@
                 <div class="navbar">
                     <div class="navlinks">
                         <ul>
-                            <li class="navlink" style="--i: 0.6s"><a href="homopage.html">Home</a></li>
+                            <li class="navlink" style="--i: 0.6s"><a href="home-page.html">Home</a></li>
                             <li class="navlink" style="--i: 0.7s"><a href="article.html">Article</a></li>
                             <li class="navlink" style="--i: 0.85s">
                                 <a href="#">Recipes<i class="material-icons">arrow_drop_down</i></a>
