--- a/home-page.html
+++ b/home-page.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8"> <!--call emojis-->
         <link rel="stylesheet" href="stylenavbar.css"> <!--css file-->
         <link rel="stylesheet" href="stylemainhome.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <!--navigation bar-->
