--- a/home-page.html
+++ b/home-page.html
@@ -51,7 +51,9 @@
         </header>
         <!--the title of the web-->
         <div class="web title">
-            <h1>C<img src="img/fried-egg.png" alt="egg" width="50px" height="50px"><img src="img/fried-egg.png" alt="egg" width="50px" height="50px">K IT</h1>
+            <p>Welcome to</p>
+            <h1>C<img src="img/fried-egg.png" alt="egg" width="50px" height="50px"><img src="img/fried-egg.png" alt="egg" width="50px" height="50px">K IT!</h1>
+            <a href="#recipes" class="learn">Learn More</a>
         </div>
         <!--list picture of recipes on landing page-->
         <div class="list pict">
