--- a/home-page.html
+++ b/home-page.html
@@ -19,18 +19,77 @@
                 <div class="navbar">
                     <div class="navlinks">
                         <ul>
-                            <li class="navlink" style="--i: 0.6s"><a href="home-page.html">Home</a></li>
-                            <li class="navlink" style="--i: 0.7s"><a href="article.html">Article</a></li>
+                            <li class="navlink" style="--i: 0.6s"><a href="homopage.html">Home</a></li>
                             <li class="navlink" style="--i: 0.85s">
-                                <a href="#">Recipes<i class="material-icons">arrow_drop_down</i></a>
+                                <a href="#">Region<i class="material-icons">arrow_drop_down</i></a>
                                 <div class="dropdown">
                                     <ul>
-                                        <li class="dropdown-link" style="--i: 0.6s"><a href="recipe1.html">Recipe 1</a></li>
-                                        <li class="dropdown-link" style="--i: 0.7s"><a href="recipe2.html">Recipe 2</a></li>
-                                        <li class="dropdown-link" style="--i: 0.8s"><a href="recipe3.html">Recipe 3</a></li>
-                                        <li class="dropdown-link" style="--i: 0.9s"><a href="recipe4.html">Recipe 4</a></li>
-                                        <li class="dropdown-link" style="--i: 1s"><a href="recipe5.html">Recipe 5</a></li>
-                                        <li class="dropdown-link" style="--i: 1.1s"><a href="recipe6.html">Recipe 6</a></li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Sumatera<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipesumatra1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipesumatra2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipesumatra3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Java<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipejava1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipejava2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipejava3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Borneo<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipeborneo1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipeborneo2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipeborneo3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Bali<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipebali1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipebali2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipebali3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Sulawesi<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipesulawesi1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipesulawesi2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipesulawesi3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="#">Papua<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipepapua1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipepapua2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipepapua3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
                                         <div class="arrow"></div>
                                     </ul>
                                 </div>
