--- a/home-page.html
+++ b/home-page.html
@@ -115,15 +115,65 @@
             <a href="#recipes" class="learn">Learn More</a>
         </div>
         <!--list picture of recipes on landing page-->
+        <div id="recipes"></div>
+        <div class="lt">
+            <h2>Our Region Recipes</h2>
+        </div>
         <div class="list pict">
-            <ul>
-                <li><img src="img/sample.png" alt="recipe 1"></li>
-                <li><img src="img/sample.png" alt="recipe 2"></li>
-                <li><img src="img/sample.png" alt="recipe 3"></li>
-                <li><img src="img/sample.png" alt="recipe 4"></li>
-                <li><img src="img/sample.png" alt="recipe 5"></li>
-                <li><img src="img/sample.png" alt="recipe 6" 4></li>
-            </ul>
+            <a class="card" href="sumatra.html">
+                <div class="card-image">
+                    <img src="img/sum.jpg" alt="Sumatera">
+                </div>
+                <div class="details">
+                    <h3>Sumatera</h3>
+                    <p>The Best and Delicious Sumatran Cuisines.</p>
+                </div>
+            </a>
+            <a class="card" href="java.html">
+                <div class="card-image">
+                    <img src="img/java.jpg" alt="Java">
+                </div>
+                <div class="details">
+                    <h3>Java</h3>
+                    <p>The Best and Delicious Javanese Cuisines.</p>
+                </div>
+            </a>
+            <a class="card" href="borneo.html">
+                <div class="card-image">
+                    <img src="img/borneo.jpg" alt="Borneo">
+                </div>
+                <div class="details">
+                    <h3>Borneo</h3>
+                    <p>The Best and Delicious Borneo Cuisines.</p>
+                </div>
+            </a>
+            <a class="card" href="bali.html">
+                <div class="card-image">
+                    <img src="img/bali.jpg" alt="Bali">
+                </div>
+                <div class="details">
+                    <h3>Bali</h3>
+                    <p>The Best and Delicious Balinese Cuisines.</p>
+                </div>
+            </a>
+            <a class="card" href="sulawesi.html">
+                <div class="card-image">
+                    <img src="img/sulawesi.jpg" alt="Sulawesi">
+                </div>
+                <div class="details">
+                    <h3>Sulawesi</h3>
+                    <p>The Best and Delicious Sulawesi Cuisines.</p>
+                </div>
+            </a>
+            <a class="card" href="papua.html">
+                <div class="card-image">
+                    <img src="img/papua.png" alt="Papua">
+                </div>
+                <div class="details">
+                    <h3>Papua</h3>
+                    <p>The Best and Delicious Papua Cuisines.</p>
+                </div>
+            </a>
         </div>
     </body>
 </html>
