--- a/home-page.html
+++ b/home-page.html
@@ -115,11 +115,10 @@
             <a href="#recipes" class="learn">Learn More</a>
         </div>
         <!--list picture of recipes on landing page-->
-        <div id="recipes"></div>
-        <div class="lt">
-            <h2>Our Region Recipes</h2>
-        </div>
-        <div class="list pict">
+        <div class="list pict" id="recipes">
+            <div class="lt">
+                <h2>Our Region Recipes</h2>
+            </div>
             <a class="card" href="sumatra.html">
                 <div class="card-image">
                     <img src="img/sum.jpg" alt="Sumatera">
