--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--setup responsive screen-->
         <meta charset="UTF-8"> <!--call emojis-->
         <link rel="stylesheet" href=""> <!--css file-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     </head>
     <body>
         <!--navigation bar-->
@@ -122,11 +123,11 @@
               <div class="left-col">
                 <img src="logo.png" alt="" class="logo">
                 <div class="social-media">
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-instagram"></i></a>
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://web.facebook.com/Jokowi/?_rdc=1&_rdr"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/AlbertAbe15"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/gek.bintangg"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/user/kittendust"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.linkedin.com/company/pt--tokopedia/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <p class="rights-text">© 2021 Cook IT</p>
               </div>
