--- a/footer.html
+++ b/footer.html
@@ -28,11 +28,11 @@
 
         <div class="right-col">
           <h1>Our Newsletter</h1>
-          <div class="border"></div>
+          <div class="border-footer"></div>
           <p>Enter Your Email to get our news and updates.</p>
           <form action="" class="newsletter-form">
-            <input type="text" class="txtb" placeholder="Enter Your Email">
-            <input type="submit" class="btn" value="submit">
+            <input type="text" class="txtb-footer" placeholder="Enter Your Email">
+            <input type="submit" class="btn-footer" value="submit">
           </form>
         </div>
       </div>
