--- a/home-page.html
+++ b/home-page.html
@@ -6,7 +6,11 @@
         <meta charset="UTF-8"> <!--call emojis-->
         <link rel="stylesheet" href="stylenavbar.css"> <!--css file-->
         <link rel="stylesheet" href="stylemainhome.css">
+        <link rel="stylesheet" href="stylefooter.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+
     </head>
     <body>
         <!--navigation bar-->
@@ -98,7 +102,7 @@
                         </ul>
                     </div>
                     <div class="log-sign" style="--i: 1.4s">
-                        <a href="login.html" class="btn transparent">Log In</a>
+                        <a href="" class="btn transparent">Log In</a>
                     </div>
                 </div>
                 <div class="hamburger-menu-container">
@@ -123,7 +127,7 @@
                 </center>
             </form>
         </div>
-        <main class="app">
+        <main class="">
             <div id="home" class="web-title">
                 <p>Welcome to</p>
                 <h1>C<img src="img/fried-egg.png" alt="egg"><img src="img/fried-egg.png" alt="egg">K IT</h1>
@@ -190,5 +194,31 @@
                 </a>
             </div>
         </main>
+        <footer>
+            <div class="footer-container">
+              <div class="left-col">
+                <img src="img/logo.png" alt="" class="logo">
+                <div class="social-media">
+                  <a href="https://web.facebook.com/Jokowi/?_rdc=1&_rdr"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/AlbertAbe15"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.instagram.com/gek.bintangg"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.youtube.com/user/kittendust"><i class="fab fa-youtube"></i></a>
+                  <a href="https://www.linkedin.com/company/pt--tokopedia/"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <p class="rights-text">© 2021 Cook IT</p>
+              </div>
+      
+              <div class="right-col">
+                <h1>Our Newsletter</h1>
+                <div class="border-footer"></div>
+                <p>Enter Your Email to get our news and updates.</p>
+                <form action="" class="newsletter-form">
+                  <input type="text" class="txtb-footer" placeholder="Enter Your Email">
+                  <input type="submit" class="btn-footer" value="submit">
+                </form>
+              </div>
+            </div>
+          </footer>
+        <script src="script-home.js"></script>
     </body>
 </html>
