--- a/home-page.html
+++ b/home-page.html
@@ -127,7 +127,7 @@
                 </center>
             </form>
         </div>
-        <main class="">
+        <main class="app">
             <div id="home" class="web-title">
                 <p>Welcome to</p>
                 <h1>C<img src="img/fried-egg.png" alt="egg"><img src="img/fried-egg.png" alt="egg">K IT</h1>
