--- a/about-us.html
+++ b/about-us.html
@@ -9,13 +9,104 @@
     </head>
     <body>
         <!--navigation bar-->
-        <div class="navbar">
-            <ul>
-                <li><a class="active" href="home.html">Home</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-            </ul>
-        </div>
+       <header>
+            <div class="container">
+                <input type="checkbox" id="check" name="">
+                <div class="logo-container">
+                    <a href="#home" class="logo">Cook<span>IT!</span></a>
+                </div>
+                <div class="navbar">
+                    <div class="navlinks">
+                        <ul>
+                            <li class="navlink" style="--i: 0.6s"><a href="homepage.html">Home</a></li>
+                            <li class="navlink" style="--i: 0.85s">
+                                <a href="#recipes">Region<i class="material-icons">arrow_drop_down</i></a>
+                                <div class="dropdown">
+                                    <ul>
+                                        <li class="dropdown-link">
+                                            <a href="sumatra.html">Sumatera<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipesumatra1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipesumatra2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipesumatra3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="java.html">Java<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipejava1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipejava2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipejava3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="borneo.html">Borneo<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipeborneo1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipeborneo2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipeborneo3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="bali.html">Bali<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipebali1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipebali2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipebali3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="sulawesi.html">Sulawesi<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipesulawesi1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipesulawesi2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipesulawesi3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown-link">
+                                            <a href="papua.html">Papua<i class="material-icons">arrow_right</i></a>
+                                            <div class="dropdown second">
+                                                <ul>
+                                                    <li class="dropdown-link"><a href="recipepapua1.html">Recipe 1</a></li>
+                                                    <li class="dropdown-link"><a href="recipepapua2.html">Recipe 2</a></li>
+                                                    <li class="dropdown-link"><a href="recipepapua3.html">Recipe 3</a></li>
+                                                    <div class="arrow"></div>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <div class="arrow"></div>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="navlink" style="--i: 1.1s"><a href="about-us.html">About Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="log-sign" style="--i: 1.4s">
+                        <a href="login.html" class="btn transparent">Log In</a>
+                    </div>
+                </div>
+                <div class="hamburger-menu-container">
+                    <div class="hamburger-menu">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+        </header>
 
         <!--the title of the web-->
         <section class="section" id="section--3">
