--- a/home-page.html
+++ b/home-page.html
@@ -23,7 +23,7 @@
                 <div class="navbar">
                     <div class="navlinks">
                         <ul>
-                            <li class="navlink" style="--i: 0.6s"><a href="homopage.html">Home</a></li>
+                            <li class="navlink" style="--i: 0.6s"><a href="home-page.html">Home</a></li>
                             <li class="navlink" style="--i: 0.85s">
                                 <a href="#">Region<i class="material-icons">arrow_drop_down</i></a>
                                 <div class="dropdown">
@@ -192,6 +192,23 @@
                         <p>The Best and Delicious Papua Cuisines.</p>
                     </div>
                 </a>
+            </div>
+            <div class="preview-article">
+                <div class="picture">
+                    <img src="img/sample.png" alt="article 1">
+                </div>
+                <article class="flex">
+                    <section class="article-section">
+                      <h2>
+                        Shift the overall look and feel by adding these wonderful touches to
+                        furniture in your home
+                      </h2>
+                      <p>
+                        Ever been in a room and felt like something was missing? Perhaps it
+                        felt slightly bare and uninviting. I’ve got some simple tips to help
+                        you make any room feel complete.
+                      </p>
+                    </section>
             </div>
         </main>
         <footer>
