--- a/home-page.html
+++ b/home-page.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <input type="checkbox" id="check" name="">
                 <div class="logo-container">
-                    <h3 class="logo">Cook<span>IT!</span></h3>
+                    <a href="#home" class="logo">C<img src="img/fried-egg.png"><img src="img/fried-egg.png">K<span>IT!</span></a> <!--Tambah Ini-->
                 </div>
                 <div class="navbar">
                     <div class="navlinks">
@@ -134,69 +134,58 @@
                 <a href="#recipes" class="learn">Learn More</a>
             </div>
             <!--list picture of recipes on landing page-->
-            <div class="list-pict" id="recipes">
-                <div class="lt">                                            <!--Ini div lt aku pindahin dari yang awalnya di luar div list-pict jadi di dalemnya-->
-                    <h2>Our Region Recipes</h2>
-                </div>
-                <a class="card" href="sumatra.html">
-                    <div class="card-image">
-                        <img src="img/sum.jpg" alt="Sumatera">
-                    </div>
-                    <div class="details">
-                        <h3>Sumatera</h3>
-                        <p>The Best and Delicious Sumatran Cuisines.</p>
+            <div class="lt" id="recipes">
+                <h2>Our Delicious Region Recipes</h2>       <!--Ini div lt aku pindah keluar lagi hehehe, maap revisinya banyak wkwkw-->
+            </div>
+            <div class="list-pict">
+                <a class="col" href="sumatra.html">
+                    <div class="card">
+                        <img class="card-image "src="img/sum.jpg" alt="Sumatera">
+                        <div class="card-title">Java</div>
+                        <div class="card-description">Javanese Cuisines</div>
                     </div>
                 </a>
-                <a class="card" href="java.html">
-                    <div class="card-image">
-                        <img src="img/java.jpg" alt="Java">
-                    </div>
-                    <div class="details">
-                        <h3>Java</h3>
-                        <p>The Best and Delicious Javanese Cuisines.</p>
+                <a class="col" href="java.html">
+                    <div class="card">
+                        <img class="card-image" src="img/java.jpg" alt="Java">
+                        <div class="card-title">Java</div>
+                        <div class="card-description">Javanese Cuisines</div>
                     </div>
                 </a>
-                <a class="card" href="borneo.html">
-                    <div class="card-image">
-                        <img src="img/borneo.jpg" alt="Borneo">
-                    </div>
-                    <div class="details">
-                        <h3>Borneo</h3>
-                        <p>The Best and Delicious Borneo Cuisines.</p>
+                <a class="col" href="borneo.html">
+                    <div class="card">
+                        <img class="card-image" src="img/borneo.jpg" alt="Borneo">
+                        <div class="card-title">Borneo</div>
+                        <div class="card-description">Borneo Cuisines</div>
                     </div>
                 </a>
-                <a class="card" href="bali.html">
-                    <div class="card-image">
-                        <img src="img/bali.jpg" alt="Bali">
-                    </div>
-                    <div class="details">
-                        <h3>Bali</h3>
-                        <p>The Best and Delicious Balinese Cuisines.</p>
+                <a class="col-2" href="bali.html">
+                    <div class="card">
+                        <img class="card-image" src="img/bali.jpg" alt="Bali">
+                        <div class="card-title">Bali</div>
+                        <div class="card-description">Balinese Cuisines</div>
                     </div>
                 </a>
-                <a class="card" href="sulawesi.html">
-                    <div class="card-image">
-                        <img src="img/sulawesi.jpg" alt="Sulawesi">
-                    </div>
-                    <div class="details">
-                        <h3>Sulawesi</h3>
-                        <p>The Best and Delicious Sulawesi Cuisines.</p>
+                <a class="col-2" href="sulawesi.html">
+                    <div class="card">
+                        <img class="card-image" src="img/sulawesi.jpg" alt="Sulawesi">
+                        <div class="card-title">Sulawesi</div>
+                        <div class="card-description">Sulawesi Cuisines</div>
                     </div>
                 </a>
-                <a class="card" href="papua.html">
-                    <div class="card-image">
-                        <img src="img/papua.png" alt="Papua">
-                    </div>
-                    <div class="details">
-                        <h3>Papua</h3>
-                        <p>The Best and Delicious Papua Cuisines.</p>
+                <a class="col" href="papua.html">
+                    <div class="card">
+                        <img class="card-image" src="img/papua.png" alt="Papua">
+                        <div class="card-title">Papua</div>
+                        <div class="card-description">Papua Cuisines</div>
                     </div>
                 </a>
             </div>
+            <div class="lt" id="recipes">
+                <h2>Article of The Week</h2>
+            </div>
             <div class="preview-article">
-                <div class="picture">
-                    <img src="img/sample.png" alt="article 1">
-                </div>
+                <div class="picture"></div>
                 <article class="flex">
                     <section class="article-section">
                       <h2>
@@ -209,6 +198,7 @@
                         you make any room feel complete.
                       </p>
                     </section>
+                </article>
             </div>
         </main>
         <footer>
