--- a/home-page.html
+++ b/home-page.html
@@ -173,7 +173,7 @@
                         <div class="card-description">Sulawesi Cuisines</div>
                     </div>
                 </a>
-                <a class="col" href="papua.html">
+                <a class="col-2" href="papua.html">
                     <div class="card">
                         <img class="card-image" src="img/papua.png" alt="Papua">
                         <div class="card-title">Papua</div>
@@ -181,10 +181,10 @@
                     </div>
                 </a>
             </div>
-            <div class="lt" id="recipes">
+            <div class="lt article">
                 <h2>Article of The Week</h2>
             </div>
-            <div class="preview-article">
+            <div class="preview-article one">
                 <div class="picture"></div>
                 <article class="flex">
                     <section class="article-section">
@@ -197,8 +197,27 @@
                         felt slightly bare and uninviting. I’ve got some simple tips to help
                         you make any room feel complete.
                       </p>
+                      <a class="article-read" href="article1.html">Read More...</a>
                     </section>
                 </article>
+            </div>
+            <div class="preview-article second">
+                <div class="picture std"></div>
+                <article class="flex">
+                    <section class="article-section">
+                      <h2>
+                        Shift the overall look and feel by adding these wonderful touches to
+                        furniture in your home
+                      </h2>
+                      <p>
+                        Ever been in a room and felt like something was missing? Perhaps it
+                        felt slightly bare and uninviting. I’ve got some simple tips to help
+                        you make any room feel complete.
+                      </p>
+                      <a class="article-read" href="article2.html">Read More...</a>
+                    </section>
+                </article>
+                <div class="picture res"></div>
             </div>
         </main>
         <footer>
