--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,10 @@
         <title>About Us</title> <!--about us section-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--setup responsive screen-->
         <meta charset="UTF-8"> <!--call emojis-->
-        <link rel="stylesheet" href=""> <!--css file-->
+        <link rel="stylesheet" href="stylenavbar.css"> <!--css file-->
+        <link rel="stylesheet" href="about-us.css">
+        <link rel="stylesheet" href="footer.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     </head>
     <body>
@@ -111,7 +114,6 @@
         <!--the title of the web-->
         <section class="section" id="section--3">
           <div class="section__title section__title--testimonials">
-            <h2 class="section__description">About Us</h2>
             <h3 class="section__header">
               Meet the team behind COOK IT.
             </h3>
@@ -121,13 +123,11 @@
             <div class="slide slide--1">
               <div class="testimonial">
                 <h5 class="testimonial__header">ini isi gak?</h5>
-                <blockquote class="testimonial__text">
-                  job desc person 1
-                </blockquote>
+                <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
                   <h6 class="testimonial__name">Albert Agung</h6>
                   <p class="testimonial__location">Bekasi, Jakarta</p>
+                  <p class="testimonial__text"> Job Desc Person 1</p>
                 </address>
               </div>
             </div>
@@ -137,13 +137,11 @@
                 <h5 class="testimonial__header">
                   The last step to becoming a complete minimalist
                 </h5>
-                <blockquote class="testimonial__text">
-                  job desc person 2
-                </blockquote>
+                <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
                   <h6 class="testimonial__name">Adinda Putri</h6>
                   <p class="testimonial__location">Purwakarta, Jawa Barat</p>
+                  <p class="testimonial__text"> Job Desc Person 1</p>
                 </address>
               </div>
             </div>
@@ -153,13 +151,11 @@
                 <h5 class="testimonial__header">
                   Finally free from old-school banks
                 </h5>
-                <blockquote class="testimonial__text">
-                  job desc person 3
-                </blockquote>
+                <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
                   <h6 class="testimonial__name">Banabil FM</h6>
                   <p class="testimonial__location">Kalimantan</p>
+                  <p class="testimonial__text"> Job Desc Person 1</p>
                 </address>
               </div>
             </div>
@@ -169,13 +165,11 @@
                 <h5 class="testimonial__header">
                   Finally free from old-school banks
                 </h5>
-                <blockquote class="testimonial__text">
-                  job desc person 4
-                </blockquote>
+                <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
                   <h6 class="testimonial__name">Bintang Krisna</h6>
                   <p class="testimonial__location">Denpasar,Bali</p>
+                  <p class="testimonial__text"> Job Desc Person 1</p>
                 </address>
               </div>
             </div>
@@ -185,13 +179,11 @@
                 <h5 class="testimonial__header">
                   Finally free from old-school banks
                 </h5>
-                <blockquote class="testimonial__text">
-                  job desc person 4
-                </blockquote>
+                <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
                   <h6 class="testimonial__name">Windy Arya</h6>
                   <p class="testimonial__location">Gianyar, Bali</p>
+                  <p class="testimonial__text"> Job Desc Person 1</p>
                 </address>
               </div>
             </div>
