--- a/about-us.html
+++ b/about-us.html
@@ -224,5 +224,6 @@
               </div>
             </div>
           </footer>
+        <script src="script-about-us"></script>
     </body>
 </html>
