--- a/search-page.html
+++ b/search-page.html
@@ -164,5 +164,7 @@
               </div>
             </div>
         </footer>
+        <script src="search-js/suggestions.js"></script>
+        <script src="search-js/script.js"></script>
     </body>
 </html>
