--- a/home-page.html
+++ b/home-page.html
@@ -189,8 +189,7 @@
                 <article class="flex">
                     <section class="article-section">
                       <h2>
-                        Shift the overall look and feel by adding these wonderful touches to
-                        furniture in your home
+                        Article 1
                       </h2>
                       <p>
                         Ever been in a room and felt like something was missing? Perhaps it
@@ -206,8 +205,7 @@
                 <article class="flex">
                     <section class="article-section">
                       <h2>
-                        Shift the overall look and feel by adding these wonderful touches to
-                        furniture in your home
+                        Article 2
                       </h2>
                       <p>
                         Ever been in a room and felt like something was missing? Perhaps it
